<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="log_in">Log In</string>

    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="restaurant_list">Restaurant List</string>
    <string name="map">Map</string>
    <string name="workmates">Workmates</string>
    <string name="search">Search</string>
    <string name="logo">Logo</string>
    <string name="log_in_with_email">Log In With Email</string>
    <string name="log_in_with_facebook">Log In With Facebook</string>
    <string name="log_in_with_gmail">Log In With Gmail</string>
    <string name="log_in_with_twitter">Log In WIth Twitter</string>
    <string name="log_in_with_github">Log In With GitHub</string>
    <string name="go4lunch" translatable="false">Go4Lunch</string>
    <string name="email_email_com" translatable="false">email@email.com</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="default_notification_channel_id" translatable="false">Go4Lucnh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="logo_url" translatable="false"><![CDATA[https://firebasestorage.googleapis.com/v0/b/go4lunch–70a23.appspot.com/o/images%2Flogo.png?alt=media&token=2055f8d2–6d9e-4cd0-ae7f-6df066ff4364]]></string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="don_t_have_an_account_click_here_to_register_for_free">Don\'t have an account? Click here to register for free</string>
    <string name="it_s_not_possible_to_show_the_map_on_yor_device">It\'s not possible to show the map on yor device</string>
    <string name="click_here_to_add_a_profile_picture">Click here to add a profile picture</string>
    <string name="distance">Filter by distance</string>
    <string name="num_of_stars">Filter by number of stars</string>
    <string name="open_now">Open now</string>
    <string name="closed">Closed</string>
    <string name="background_image">Background Image</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="please_unsert_an_email">please insert an email</string>
    <string name="please_insert_a_password">please insert a password</string>
    <string name="language">Language:</string>
    <string name="notifications">Notifications:</string>
    <string name="loading_map">Loading Map</string>
    <string name="change_language">Change language</string>
    <string name="change_lang_restart_app">Changing language will restart the app, do you want to continue?</string>
    <string name="failed">Failed</string>
    <string name="it_is_not_possible_to_display_info_restaurant">It is not possible to display info about this restaurant</string>
    <string name="click_here_to_see_more">Click here to see more</string>
    <string name="it_is_not_pos_find_place">It is not possible to find the place</string>
    <string name="person_is">person is</string>
    <string name="persons_are">persons are</string>
    <string name="going_here">%d %s going here</string>
    <string name="place_not_found">Place not found:</string>
    <string name="star">star</string>
    <string name="stars">stars</string>
    <string name="it_is_not_possible_to_dispay_map">It is not possible to display the map</string>
    <string name="it_was_not_foun_lunch">It was not found a lunch plan</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="min_number_of_stars">Min number of stars</string>
    <string name="_0_stars">0 stars</string>
    <string name="max_number_of_stars">Max number of stars</string>
    <string name="_3_stars">3 stars</string>
    <string name="min_distance">Min distance</string>
    <string name="_0_m" translatable="false">0 m</string>
    <string name="max_distance">Max distance</string>
    <string name="_1000_m" translatable="false">1000 m</string>
    <string name="ftr">filter</string>
    <string name="is_eating_at">is eating at</string>
    <string name="hasnt_decided_yet">hasn\'t decided yet</string>
</resources>
