<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterActivity">

    <com.jgabrielfreitas.core.BlurImageView
        android:id="@+id/activity_register_background_blur_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/dinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_register_background_blur_image" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_register_background_blur_image"
        app:layout_constraintVertical_bias="0.88"
        >

        <Button
            android:id="@+id/activity_register_log_in_btn"
            android:layout_width="@dimen/log_in_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/log_in_with_email"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_round_email"
            />

        <Button
            android:id="@+id/activity_register_facebook_btn"
            android:layout_width="@dimen/log_in_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/log_btn_margin_top"
            android:text="@string/log_in_with_facebook"
            android:background="@drawable/btn_round_facebook"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/activity_register_gmail_btn"
            android:layout_width="@dimen/log_in_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/log_btn_margin_top"
            android:text="@string/log_in_with_gmail"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_round_gmail"/>

        <Button
            android:id="@+id/activity_register_github_btn"
            android:layout_width="@dimen/log_in_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/log_btn_margin_top"
            android:text="@string/log_in_with_github"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_round_github"/>

        <Button
            android:id="@+id/activity_register_twitter_btn"
            android:layout_width="@dimen/log_in_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/log_btn_margin_top"
            android:text="@string/log_in_with_twitter"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_round_twitter"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>