<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".ui.activities.RestaurantActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/restaurant_activity_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:scaleType="centerCrop"
            android:src="@android:color/black"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/restaurant_activity_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_activity_image_view"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/restaurant_activity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:id="@+id/restaurant_activity_rating_star_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_star_yellow_16dp"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/restaurant_activity_rating_star_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_star_yellow_16dp"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/restaurant_activity_rating_star_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_star_yellow_16dp"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:id="@+id/restaurant_activity_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:textColor="@android:color/white"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/restaurant_activity_go_option_container"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/restaurant_activity_image_view"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_white_bkg"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:id="@+id/restaurant_activity_go_option_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/restaurant_activity_contacts_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurant_activity_title_container"
            android:background="@android:color/white"
            android:weightSum="3"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:id="@+id/restaurant_activity_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/actitivity_restaurant_contacts_item_size"
                    android:layout_height="@dimen/actitivity_restaurant_contacts_item_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="3dp"
                    android:gravity="center_horizontal"
                    app:srcCompat="@drawable/ic_call_orange_75dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/call"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/activity_restaurant_contacts_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/restaurant_activity_like"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/restaurant_activity_star_image_view"
                    android:layout_width="@dimen/actitivity_restaurant_contacts_item_size"
                    android:layout_height="@dimen/actitivity_restaurant_contacts_item_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="3dp"
                    android:gravity="center_horizontal"
                    app:srcCompat="@drawable/ic_star_border_orange_75dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/like"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/activity_restaurant_contacts_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/restaurant_activity_web"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/actitivity_restaurant_contacts_item_size"
                    android:layout_height="@dimen/actitivity_restaurant_contacts_item_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="3dp"
                    android:gravity="center_horizontal"
                    app:srcCompat="@drawable/ic_public_world_75dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/website"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/activity_restaurant_contacts_text_size" />
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_restaurant_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/restaurant_activity_contacts_container"
            android:layout_margin="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>


</ScrollView>